<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ARQS</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="load_title">Anonymous\nRude\nQuestions\nSystem</string>
    <string name="loading_byline">by Team PRO</string>
    <string name="title_activity_account_creation">ARQS</string>
    <string name="accountcreation_instructionstop">Hello FirstName LastName.  You do not have an ARQS account.  Create one by entering a passphrase.  This is distinct from your Backyard password.  We will generate an anonymous username for you.</string>
    <string name="accountcreation_passphrasehint">Create passphrase</string>
    <string name="accountcreation_instructionsbottom">"Your anonymous username will be “ARQSNAME”.  If you do not like this, change your passphrase.  If you do like this, then click the below button. "</string>
    <string name="button_enter">Enter ARQS</string>
    <string name="title_activity_login">ARQS</string>
    <string name="login_welcom">Hello.  Enter your passphrase to continue.\n</string>
    <string name="login_passphrasehint">Enter passphrase</string>
    <string name="title_activity_list">ARQS</string>
    <string name="list_searchhint">Search….</string>
    <string name="button_submitquestion">Submit Question</string>
    <string name="question_00001">My butt is too big.\nI have a big butt.  Can Yahoo make it smaller?\n10/13/2013 - Steel8231</string>
    <string name="button_up">UpVote</string>
    <string name="button_down">DownVote</string>
    <string name="question_00002">Your butt is too big.\nYou have a big butt.  Can Yahoo make it smaller?\n10/13/2013 - Steel8231</string>
    <string name="question_00003">Our butts are too big.\nWe have big butts.  Can Yahoo make them smaller?\n10/13/2013 - Steel8231</string>
    <string name="title_activity_submit_question">ARQS</string>
    <string name="submit_instructionstop">Submit your Rude Question\n</string>
    <string name="submit_subjecthint">Subject</string>
    <string name="submit_questionhint">Enter your Rude Question</string>
    <string name="submit_instructionsmiddle">Remaining characters: 254</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_submit">Submit</string>
    <string name="submit_instructionsbottom">Preview your Rude Question: </string>
    <string name="button_preview">Preview</string>
    <string name="display_prompt">Choose a display order</string>
    <string name="question_preview">Here is what your rude question looks like</string>
    <string name="edit">Edit</string>

    <string-array name="display_order">
        <item>Most Recent</item>
        <item>Oldest</item>
        <item>Most Thumbs Up</item>
        <item>Most Thumbs Down</item>
        <item>Most Popular</item>
        <item>Least Popular</item>
        <item>Random</item>
        <item>Mine</item>
    </string-array>

    <string name="title_activity_menu">ARQS</string>
    <string name="menu_description">This is a simple page to get to all the wire frames.  When we are done, we will launch directly into the Loading activity and make a backdoor to this activity.</string>
    <string name="button_gotoloading">Go to Loading Page</string>
    <string name="button_gotoaccountcreation">Go to Account Creation Page</string>
    <string name="button_gotologin">Go to Login Page</string>
    <string name="button_gotolist">Go to mocked up List Page</string>
    <string name="button_gotosubmit">Go to Submit Page</string>
    <string name="title_activity_fragement_submit_question">Fragement_submit_question</string>
    <string name="title_activity_preview_question">Preview</string>
    <string name="button_gotoquestions">Go to Questions Page</string>
    <string name="title_activity_questions">ARQS</string>
    <string name="action_compose">Compose</string>
    <string name="action_refresh">Refresh</string>
    <string name="question_item">question item</string>
    <string name="all_questions">All Questions</string>
    <string name="my_questions">My Questions</string>
    <string name="upded">Uped Questions</string>
    <string name="upped">Upped Questions</string>
    <string name="downed">Downed Questions</string>
    <string name="Register">Register</string>
    <string name="register_phone">Register Your Phone with ARQS</string>
    <string name="title_activity_single_question">SingleQuestion</string>
    <string name="zero">0</string>

</resources>
