<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SubmitQuestionActivity" >

    <TextView
        android:id="@+id/tvSubmitInstructionsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/submit_instructionstop"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/etSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSubmitInstructionsTop"
        android:ems="10"
        android:hint="@string/submit_subjecthint" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etSubject"
        android:ems="10"
        android:hint="@string/submit_questionhint" />

    <Button
        android:id="@+id/btnCancel1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etQuestion"
        android:onClick="onCancel"
        android:text="@string/button_cancel" />

    <Button
        android:id="@+id/btnSubmit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnCancel1"
        android:layout_toLeftOf="@+id/btnCancel1"
        android:onClick="onSubmit"
        android:text="@string/button_submit" />

    <Button
        android:id="@+id/btnPreview"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etQuestion"
        android:layout_toLeftOf="@+id/btnSubmit"
        android:onClick="onPreview"
        android:text="@string/button_preview" />

</RelativeLayout>