<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_thumbs_25kb"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/tvLoginWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/login_welcom" />

    <EditText
        android:id="@+id/etLoginPassphrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLoginWelcome"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/login_passphrasehint"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnLoginEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLoginPassphrase"
        android:layout_centerHorizontal="true"
        android:onClick="onLogin"
        android:text="@string/button_enter" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="54dp"
        android:onClick="onAccountCreation"
        android:text="@string/Register" />

    <TextView
        android:id="@+id/tvDontHave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/register_phone" />

</RelativeLayout>
