<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountCreationActivity" >

    <TextView
        android:id="@+id/tvAccountCreationInstructionsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/accountcreation_instructionstop" />

    <EditText
        android:id="@+id/etPassphrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAccountCreationInstructionsTop"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/accountcreation_passphrasehint"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvAccountCreationInstructionsBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAccountCreationInstructionsTop"
        android:layout_below="@+id/etPassphrase"
        android:text="@string/accountcreation_instructionsbottom" />

    <Button
        android:id="@+id/btnAccountCreationEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onSignUp"
        android:text="@string/button_enter" />

</RelativeLayout>
