<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PreviewQuestion" >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_preview" />

    <TextView
        android:id="@+id/tvPreviewSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/tvPreviewQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvPreviewSubject"
        android:layout_marginTop="18dp"
        android:text="TextView" />

    <Button
        android:id="@+id/btnPreviewSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvPreviewQuestion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="146dp"
        android:onClick="onSubmit"
        android:text="@string/button_submit" />

    <Button
        android:id="@+id/btnPreviewCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnPreviewSubmit"
        android:layout_alignBottom="@+id/btnPreviewSubmit"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/btnPreviewSubmit"
        android:onClick="onCancel"
        android:text="@string/button_cancel" />

    <Button
        android:id="@+id/btnPreviewEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnPreviewSubmit"
        android:layout_alignBottom="@+id/btnPreviewSubmit"
        android:layout_alignParentLeft="true"
        android:onClick="onEdit"
        android:text="@string/edit" />

</RelativeLayout>